@@ -2,6 +2,9 @@ main-menu (0.051) UNRELEASED; urgency=low
 
   * Peter Mann
     - Initial Slovak translation (sk.po).
+  * Steinar H. Gunderson
+    - If main-menu encounters an unknown debconf/priority, it is no longer
+      interpreted as `critical', but as `medium'.
 
  -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 22:56:09 -0500
 
